[package]
name = "comprehensive-calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
crossterm = "0.29.0"
directories = "6.0.0"
evalexpr = { version = "13.0.0", features = ["serde"] }
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
